Complete apply feature

--- a/src/views/layouts/main.pug
+++ b/src/views/layouts/main.pug
@@ -10,14 +10,17 @@ html(lang='en')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     title :: Job Word - Job Portal HTML Template ::
     // Favicon
-    link(rel='shortcut icon' href='images/favicon.png')
+    link(rel='shortcut icon' href='/images/favicon.png')
     // CSS
-    link(rel='stylesheet' href='css/bootstrap-grid.css')
-    link(rel='stylesheet' href='css/icons.css')
-    link(rel='stylesheet' href='css/style.css')
+    link(rel='stylesheet' href='/css/bootstrap-grid.css')
+    link(rel='stylesheet' href='/css/icons.css')
+    link(rel='stylesheet' href='/css/style.css')
     // Google Fonts
     link(href='https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800&display=swap' rel='stylesheet')
     link(href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&display=swap' rel='stylesheet')
+    // iziToast
+    link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/css/iziToast.min.css')
+    block styles
   body
     include ../partials/preloader
     // Wrapper
@@ -27,20 +30,24 @@ html(lang='en')
       include ../partials/subscribe
       include ../partials/footer
     // Wrapper / End
-    // Scripts
-    script(src='js/jquery-3.3.1.min.js')
-    script(src='js/jquery-migrate-3.0.0.min.js')
+    block modals
+
+    //scripts
+    script(src='/js/jquery-3.3.1.min.js')
+    script(src='/js/jquery-migrate-3.0.0.min.js')
+    script(src='https://kit.fontawesome.com/135c4d96ce.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js')
     script(src='https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js')
-    script(src='js/mmenu.min.js')
-    script(src='js/tippy.all.min.js')
-    script(src='js/simplebar.min.js')
-    script(src='js/bootstrap-slider.min.js')
-    script(src='js/bootstrap-select.min.js')
-    script(src='js/snackbar.js')
-    script(src='js/clipboard.min.js')
-    script(src='js/counterup.min.js')
-    script(src='js/magnific-popup.min.js')
-    script(src='js/slick.min.js')
-    script(src='js/typed.js')
-    script(src='js/custom_jquery.js')
+    script(src='/js/mmenu.min.js')
+    script(src='/js/tippy.all.min.js')
+    script(src='/js/simplebar.min.js')
+    script(src='/js/bootstrap-slider.min.js')
+    script(src='/js/bootstrap-select.min.js')
+    script(src='/js/snackbar.js')
+    script(src='/js/clipboard.min.js')
+    script(src='/js/counterup.min.js')
+    script(src='/js/magnific-popup.min.js')
+    script(src='/js/slick.min.js')
+    script(src='/js/custom_jquery.js')
+    script(src='/js/chart.min.js')
     block scripts 
